expo eject and app bundle release

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('my-upload-key.keystore')
+            storePassword 'manchester'
+            keyAlias 'my-key-alias'
+            keyPassword 'manchester'
+    }
     }
     buildTypes {
         debug {
@@ -164,6 +170,8 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
+
         }
     }
 
